nav menu not opening on mobile fix

--- a/css/navmenu.css
+++ b/css/navmenu.css
@@ -32,7 +32,7 @@ body {
 
 @media (min-width: 992px) {
   body {
-    padding: 0 0 0 200px;
+    padding: 0 0 0 321px;
   }
   .navmenu {
     padding-top: 0;
